--- a/personal-account.html
+++ b/personal-account.html
@@ -169,7 +169,7 @@
               <div class="account-block__profile-block">
                 <div class="account-block__profile-photo-block">
                   <div class="account-block__profile-photo">
-                    <img src="img/profile-photo.jpg" alt="">
+                    <img src="img/user-photo.png" alt="">
                     <div class="account-block__profile-photo-file">
                       <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="camera" class="svg-inline--fa fa-camera fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="16" height="16"><path fill="#fff" d="M512 144v288c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48h88l12.3-32.9c7-18.7 24.9-31.1 44.9-31.1h125.5c20 0 37.9 12.4 44.9 31.1L376 96h88c26.5 0 48 21.5 48 48zM376 288c0-66.2-53.8-120-120-120s-120 53.8-120 120 53.8 120 120 120 120-53.8 120-120zm-32 0c0 48.5-39.5 88-88 88s-88-39.5-88-88 39.5-88 88-88 88 39.5 88 88z"></path></svg>
                       <input type="file" class="account-block__profile-file-input">
@@ -299,7 +299,7 @@
               </div>
 
               <div class="account-block__details-block">
-                <div class="account-block__details-title">Referral details</div>
+                <div class="account-block__details-title">Customer Identification Number details</div>
 
                 <div class="account-block__details-option-wrapper">
                   <div class="account-block__details-option">
@@ -307,7 +307,7 @@
                     <div class="account-block__details-option-value">237483</div>
                   </div>
                   <div class="account-block__details-option">
-                    <div class="account-block__details-option-title referral">Referral Link</div>
+                    <div class="account-block__details-option-title">Referral Link</div>
                     <div class="account-block__details-option-value">mantratourus.com/id237483</div>
                   </div>
                 </div>
