--- a/personal-account-members.html
+++ b/personal-account-members.html
@@ -210,145 +210,31 @@
               </div>
             </div>
             <div class="account-block__content-block">
-              <div class="account-block__content-title">Account settings</div>
-
-              <div class="account-block__complete-block">
-                <div class="account-block__complete-title">Profile Copleteness</div>
-
-                <div class="account-block__complete-wrapper">
-                  <div class="account-block__complete-card">
-                    <div class="account-block__complete-card-icon">
-                      <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="mobile-alt" class="svg-inline--fa fa-mobile-alt fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" width="25" height="40"><path fill="#dee3e4" d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"></path></svg>
-                    </div>
-                    <div class="account-block__complete-card-checked">
-                      <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check-circle" class="svg-inline--fa fa-check-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="21" height="21"><path fill="#0b3b9d" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>
-                    </div>
-                    <div class="account-block__complete-card-title">Mobile approved</div>
-                  </div>
-                  
-                  <div class="account-block__complete-card">
-                    <div class="account-block__complete-card-icon">
-                      <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="40" height="40"><path fill="#dee3e4" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg>
-                    </div>
-                    <div class="account-block__complete-card-checked">
-                      <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="circle" class="svg-inline--fa fa-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="21" height="21"><path fill="#dee3e4" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"></path></svg>
-                    </div>
-                    <div class="account-block__complete-card-title">Email not approved</div>
-                  </div>
-                </div>
+              <div class="account-block__statement-block">
+                <div class="account-block__statement-title">List of my referred members registred and active</div>
+                <table class="rwd-table members">
+                  <tr class="account-block__table-heading">
+                    <th>Member name</th>
+                    <th>CIN</th>
+                    <th>Points earned</th>
+                  </tr>
+                  <tr class="account-block__table-inner">
+                    <td>Yuri Kurochka</td>
+                    <td>00000000</td>
+                    <td>1000 Points</td>
+                  </tr>
+                  <tr>
+                    <td>Anton Denisov</td>
+                    <td>00000000</td>
+                    <td>1000 Points</td>
+                  </tr>
+                  <tr>
+                    <td>Mark Sontanno</td>
+                    <td>00000000</td>
+                    <td>1000 Points</td>
+                  </tr>
+                </table>
               </div>
-
-              <div class="account-block__details-block">
-                <div class="account-block__details-title">Personal Details</div>
-
-                <div class="account-block__details-option-wrapper">
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Salutation</div>
-                    <div class="account-block__details-option-value">Mr.</div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">First Name</div>
-                    <div class="account-block__details-option-value">Mark</div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Family Name</div>
-                    <div class="account-block__details-option-value">Rotes</div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Date of Birth</div>
-                    <div class="account-block__details-option-value">12 September 1982</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="account-block__details-block">
-                <div class="account-block__details-title">Email Address</div>
-
-                <div class="account-block__details-option-wrapper">
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Email</div>
-                    <div class="account-block__details-option-value">markotes@gmail.com</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="account-block__details-block">
-                <div class="account-block__details-title">Phone</div>
-
-                <div class="account-block__details-option-wrapper">
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Mobile</div>
-                    <div class="account-block__details-option-value">+971588327252</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="account-block__details-block">
-                <div class="account-block__details-title">Security</div>
-
-                <div class="account-block__details-option-wrapper">
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Login</div>
-                    <div class="account-block__details-option-value">MarkRo8221</div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Password</div>
-                    <div class="account-block__details-option-value">••••••••</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="account-block__details-block">
-                <div class="account-block__details-title">Customer Identification Number details</div>
-
-                <div class="account-block__details-option-wrapper">
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Customer Identification Number</div>
-                    <div class="account-block__details-option-value">237483</div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Referral Link</div>
-                    <div class="account-block__details-option-value">mantratourus.com/id237483</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="account-block__details-block">
-                <div class="account-block__details-title">Social Accounts</div>
-
-                <div class="account-block__details-option-wrapper social">
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Facebook account name</div>
-                    <div class="account-block__details-option-value">
-                      <div class="account-block__details-input-wrapper"><input type="text" class="account-block__details-input" id="account_facebook" name="account_facebook" placeholder="voinov_art"></div>
-                    </div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Instagram account name</div>
-                    <div class="account-block__details-option-value">
-                      <div class="account-block__details-input-wrapper"><input type="text" class="account-block__details-input" id="account_instagram" name="account_instagram" placeholder="voinov_art"></div>
-                    </div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">Twitter account name</div>
-                    <div class="account-block__details-option-value">
-                      <div class="account-block__details-input-wrapper"><input type="text" class="account-block__details-input" id="account_instagram" name="account_instagram" placeholder="voinov_art"></div>
-                    </div>
-                  </div>
-                  <div class="account-block__details-option">
-                    <div class="account-block__details-option-title">YouTube User ID</div>
-                    <div class="account-block__details-option-value">
-                      <div class="account-block__details-input-wrapper"><input type="text" class="account-block__details-input" id="account_instagram" name="account_instagram" placeholder="pfsYCyOlSL5g9wDVdg4vWQ"></div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="account-block__details-button-wrapper">
-                  <button type="submit" class="btn--changes">Save changes</button>
-                </div>
-
-              </div>
-
             </div>
           </div>
         </div>
